src/matrix/deploy/10-matrix-deploy-matrix.yaml
kind: Deployment
apiVersion: apps/v1beta1
metadata:
  namespace: matrix
  name: matrix
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: matrix
      name: matrix
      labels:
        app: matrix
    spec:
      volumes:
      - name: neo-disk
        persistentVolumeClaim:
          claimName: neo-disk
      - name: neo-identity-config
        persistentVolumeClaim:
          claimName: neo-identity-config
      - name: neo-identity-var
        persistentVolumeClaim:
          claimName: neo-identity-var
      containers:
      - name: matrix-identity
        image: 'gcr.io/wiresafe-project/matrix-identity:0.0.18'
        ports:
        - containerPort: 8090
        volumeMounts:
        - name: neo-identity-config
          mountPath: /etc/mxisd
        - name: neo-identity-var
          mountPath: /var/mxisd
          readOnly: false
        - name: neo-disk
          mountPath: /var/synapse
          readOnly: false
        readinessProbe:
          httpGet:
            path: /_matrix/identity/api/v1
            port: 8090
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
          failureThreshold: 10
      - name: matrix
        image: 'gcr.io/wiresafe-project/matrix:0.1.1'
        ports:
        - containerPort: 8008
        - containerPort: 8448
        volumeMounts:
        - name: neo-disk
          mountPath: /data
        args:
        - "start"
        readinessProbe:
          httpGet:
            path: /_matrix/client/versions
            port: 8008
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
          failureThreshold: 10
