src/matrix/deploy/20-matrix-service-matrix-identity.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-identity
  namespace: matrix
  labels:
    app: matrix
spec:
  ports:
  - port: 8090
    name: mxisd-http
  selector:
    app: matrix
  type: NodePort
