src/matrix/deploy/20-matrix-service-matrix.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix
  namespace: matrix
  labels:
    app: matrix
spec:
  ports:
  - port: 8008
    name: synapse-http
  - port: 8448
    name: synapse-https
  selector:
    app: matrix
  type: NodePort
